[metadata]
name = x25519
version = 0.0.2
author = 1ocalhost
description = A pure Python implemention of curve25519
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/1ocalhost/x25519
classifiers =
    Programming Language :: Python
    License :: Public Domain
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src
